# hhc

./: .gitattributes  .gitignore  CMakeLists.txt  ecs.txt  hhc  hhc.c  hhc.h  notes.txt  steps.txt
CMake/Modules/: FindSDL2_net.cmake
include/: common.h  hhc.h  input.h  output.h  platform-layer.h
src/: hhc.c  input.c  linux_load-hhc.c  output.c  platform-layer.c  platform_layer.c  win32_load-hhc.c
